<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/delete_acc_confirmation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.delete.DeleteActivity">

    <Button
        android:id="@+id/button_affirmative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/custom_button"
        android:text="@string/affirmative"
        android:textColor="#5E35B1"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_negative"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/custom_button"
        android:text="@string/negative"
        android:textColor="#5E35B1"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_affirmative" />

    <TextView
        android:id="@+id/delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/delete_acc_confirmation"
        android:textColor="#DD2C00"
        app:layout_constraintBottom_toTopOf="@+id/button_affirmative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>